--- a/main/templates/main/admin/feedbacklist.html
+++ b/main/templates/main/admin/feedbacklist.html
@@ -22,7 +22,19 @@ List of Food
             <h6>View all feedback</h6>
         </div>
     </div>
-
+    <div class="row">
+        {% for message in messages %}
+        {% if message.tags == 'success' %}
+        <div class="alert alert-success" role="alert">
+            {{ message }}
+        </div>
+        {% elif message.tags == 'error' %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+        {% endif %}
+        {% endfor %}
+    </div>
     <div class="card">
         <div class="card-body">
             <div class="table-responsive">
@@ -42,7 +54,7 @@ List of Food
                         <tr>
                             <td>
                                 <a href="{{ feedback.order.product.image.url }}">
-                                    <img width="50" src="{{ feedback.order.product.image.url }}" >
+                                    <img width="50" src="{{ feedback.order.product.image.url }}">
                                 </a>
                             </td>
                             <td>
@@ -94,37 +106,39 @@ List of Food
                                 </div>
                             </td>
                             <td class="text-center">
-                                <a type="button" data-bs-toggle="modal" id="" data-bs-target="#delModal">
+                                <a type="button" data-bs-toggle="modal" id=""
+                                   data-bs-target="#delModal{{ feedback.id }}">
                                     <i data-feather="delete"></i>
                                 </a>
                             </td>
                         </tr>
                     </tbody>
+                    <!-- Delete Modal -->
+                    <div class="modal fade" id="delModal{{ feedback.id }}">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form action="" method="post" id="delete_frm">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Deleting...?</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <input name="id" type="hidden">
+                                        <p>Are you sure you want to delete this data?</p>
+                                    </div>
+                                    <div class="modal-footer float-end">
+                                        <a type="submit" class="btn btn-danger"
+                                           href="{% url 'admin_feedback_list_delete' feedback.id %}">Yes</a>
+                                        <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                     {% endfor %}
                 </table>
             </div>
-        </div>
-    </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="delModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form action="" method="post" id="delete_frm">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Deleting...?</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <input name="id" type="hidden">
-                    <p>Are you sure you want to delete this data?</p>
-                </div>
-                <div class="modal-footer float-end">
-                    <button type="submit" class="btn btn-danger">Yes</button>
-                    <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
-                </div>
-            </form>
         </div>
     </div>
 </div>
