--- a/main/templates/main/customer/rateviewitemlist.html
+++ b/main/templates/main/customer/rateviewitemlist.html
@@ -114,58 +114,19 @@
 									<i data-feather="eye"></i>
 								</a>
 								{% if order.is_rated == True %}
-								<a class="btn btn-sm btn-secondary disabled" type="button" data-bs-toggle="modal" id=""
-								   data-bs-target="#rateModal{{ order.id }}">
+								<a class="btn btn-sm btn-secondary disabled" type="button" data-bs-toggle="modal"
+								   data-bs-target="#rateModal">
 									<i data-feather="thumbs-up"></i>
 								</a>
 								{% else %}
-								<a class="btn btn-sm btn-warning" type="button" data-bs-toggle="modal" id=""
-								   data-bs-target="#rateModal{{ order.id }}">
+								<a class="btn btn-sm btn-warning" type="button" data-bs-toggle="modal" id="{{ order.id }}"
+								   data-bs-target="#rateModal">
 									<i data-feather="thumbs-up"></i>
 								</a>
 								{% endif %}
 							</td>
 						</tr>
 
-						<!-- Rating Modal -->
-						<div class="modal fade" id="rateModal{{ order.id }}">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<form action="{% url 'customer_feedback' order.id %}" method="POST" id="ca_frm">
-										{% csrf_token %}
-										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel">FeedBack</h5>
-											<button type="button" class="btn-close" data-bs-dismiss="modal"
-													aria-label="Close"></button>
-										</div>
-										<div class="modal-body">
-											<label for="message">Feedback:</label> <br>
-											<textarea class="form-control" name="message" id="message" cols="55"
-													  rows="7"></textarea>
-											<br>
-											<p>Rating:</p>
-											<div class="rate">
-												<input type="radio" id="star1" name="rate1" value="5" />
-												<label for="star1" title="text">1 stars</label>
-												<input type="radio" id="star2" name="rate2" value="4" />
-												<label for="star2" title="text">2 stars</label>
-												<input type="radio" id="star3" name="rate3" value="3" />
-												<label for="star3" title="text">3 stars</label>
-												<input type="radio" id="star4" name="rate4" value="2" />
-												<label for="star4" title="text">4 stars</label>
-												<input type="radio" id="star5" name="rate5" value="1" />
-												<label for="star5" title="text">5 star</label>
-											</div>
-										</div>
-										<div class="modal-footer float-end">
-											<button type="submit" class="btn btn-dark">Submit</button>
-											<a class="btn btn-cancel" data-bs-dismiss="modal"
-											   aria-label="Close">Cancel</a>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
 						<!-- View modal -->
 						<div class="modal fade" id="viewModal{{ order.id }}">
 							<div class="modal-lg modal-dialog">
@@ -246,14 +207,67 @@
 	<a class="btn btn-primary" onclick="window.history.go(-1); return false;"><i class="fa fa-arrow-left"></i> Back</a>
 
 </div>
+
+<!-- Rating Modal -->
+<div class="modal fade" id="rateModal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<form action="{% url 'customer_feedback' %}" method="POST" id="rate_frm">
+				{% csrf_token %}
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">FeedBack</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+							aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<input type="hidden" name="id">
+					<div class="form-group">
+						<label for="message">Feedback:</label> <br>
+						<textarea class="form-control" name="message" id="message" cols="55"
+								  rows="7"></textarea>
+					</div>
+					<div class="form-group">
+						<label>Rating:</label>
+						<div class="rate">
+							<input type="radio" id="star1" name="rate" value="5" />
+							<label for="star1" title="text">1 stars</label>
+							<input type="radio" id="star2" name="rate" value="4" />
+							<label for="star2" title="text">2 stars</label>
+							<input type="radio" id="star3" name="rate" value="3" />
+							<label for="star3" title="text">3 stars</label>
+							<input type="radio" id="star4" name="rate" value="2" />
+							<label for="star4" title="text">4 stars</label>
+							<input type="radio" id="star5" name="rate" value="1" />
+							<label for="star5" title="text">5 star</label>
+						</div>
+					</div>
+				</div>
+
+				<div class="modal-footer float-end">
+					<button type="submit" class="btn btn-dark">Submit</button>
+					<a class="btn btn-cancel" data-bs-dismiss="modal"
+					   aria-label="Close">Cancel</a>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+{% endblock %}
+
+{% block javascripts %}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-$(document).ready(function() {
-  $('input[type=radio]').click(function() {
-    var ratingValue = $(this).val();
-    $('#selected-rating').text(ratingValue);
-  });
-});
+	$(document).ready(function() {
+	  $('input[type=radio]').click(function() {
+		var ratingValue = $(this).val();
+		$('#selected-rating').text(ratingValue);
+	  });
+	});
+	$('#rateModal').on('show.bs.modal', function (e) {
+		var opener = e.relatedTarget;
+		var id = $(opener).attr('id');
+		$('#rate_frm').find('[name="id"]').val(id);
+	});
 </script>
-{% endblock %}
+{% endblock javascripts %}
 
