--- a/main/templates/main/customer/viewitemlist.html
+++ b/main/templates/main/customer/viewitemlist.html
@@ -107,6 +107,11 @@
 												</div>
 											</div>
 											<div class="form-group">
+												<label>Note</label>
+												<textarea name="note" id="note" cols="30" rows="10"
+														  readonly>{{ order.note }}</textarea>
+											</div>
+											<div class="form-group">
 												<label>Description</label>
 												<textarea name="description" id="description" cols="30" rows="10"
 														  readonly>{{ order.product.description }}</textarea>
@@ -124,10 +129,14 @@
 					{% endfor %}
 					<tr>
 						<td colspan="3"></td>
-                        <td colspan="2"><h4>Total Amount :</h4></td>
-                        <td><h4>₱ {{ total_amount }}</h4></td>
+						<td colspan="2">
+							<h4>Total Amount :</h4>
+						</td>
+						<td>
+							<h4>₱ {{ total_amount }}</h4>
+						</td>
 						<td></td>
-                    </tr>
+					</tr>
 				</table>
 			</div>
 		</div>
