--- a/main/templates/main/customer/rateviewitemlist.html
+++ b/main/templates/main/customer/rateviewitemlist.html
@@ -119,8 +119,8 @@
 									<i data-feather="thumbs-up"></i>
 								</a>
 								{% else %}
-								<a class="btn btn-sm btn-warning" type="button" data-bs-toggle="modal" id="{{ order.id }}"
-								   data-bs-target="#rateModal">
+								<a class="btn btn-sm btn-warning" type="button" data-bs-toggle="modal"
+								   id="{{ order.id }}" data-bs-target="#rateModal">
 									<i data-feather="thumbs-up"></i>
 								</a>
 								{% endif %}
@@ -179,6 +179,11 @@
 												</div>
 											</div>
 											<div class="form-group">
+												<label>Note</label>
+												<textarea name="note" id="note" cols="30" rows="10"
+														  readonly>{{ order.note }}</textarea>
+											</div>
+											<div class="form-group">
 												<label>Description</label>
 												<textarea name="description" id="description" cols="30" rows="10"
 														  readonly>{{ order.product.description }}</textarea>
@@ -196,10 +201,14 @@
 					{% endfor %}
 					<tr>
 						<td colspan="3"></td>
-                        <td colspan="2"><h4>Total Amount :</h4></td>
-                        <td><h4>₱ {{ total_amount }}</h4></td>
+						<td colspan="2">
+							<h4>Total Amount :</h4>
+						</td>
+						<td>
+							<h4>₱ {{ total_amount }}</h4>
+						</td>
 						<td></td>
-                    </tr>
+					</tr>
 				</table>
 			</div>
 		</div>
@@ -216,15 +225,13 @@
 				{% csrf_token %}
 				<div class="modal-header">
 					<h5 class="modal-title" id="exampleModalLabel">FeedBack</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal"
-							aria-label="Close"></button>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
 					<input type="hidden" name="id">
 					<div class="form-group">
 						<label for="message">Feedback:</label> <br>
-						<textarea class="form-control" name="message" id="message" cols="55"
-								  rows="7"></textarea>
+						<textarea class="form-control" name="message" id="message" cols="55" rows="7"></textarea>
 					</div>
 					<div class="form-group">
 						<label>Rating:</label>
@@ -245,8 +252,7 @@
 
 				<div class="modal-footer float-end">
 					<button type="submit" class="btn btn-dark">Submit</button>
-					<a class="btn btn-cancel" data-bs-dismiss="modal"
-					   aria-label="Close">Cancel</a>
+					<a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
 				</div>
 			</form>
 		</div>
@@ -257,11 +263,11 @@
 {% block javascripts %}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-	$(document).ready(function() {
-	  $('input[type=radio]').click(function() {
-		var ratingValue = $(this).val();
-		$('#selected-rating').text(ratingValue);
-	  });
+	$(document).ready(function () {
+		$('input[type=radio]').click(function () {
+			var ratingValue = $(this).val();
+			$('#selected-rating').text(ratingValue);
+		});
 	});
 	$('#rateModal').on('show.bs.modal', function (e) {
 		var opener = e.relatedTarget;
@@ -270,4 +276,3 @@
 	});
 </script>
 {% endblock javascripts %}
-
